@@ -1,5 +1,5 @@
 Package: cogena
-Version: 1.15.0
+Version: 1.15.1
 Title: co-expressed gene-set enrichment analysis
 Authors@R: c(person("Zhilong", "Jia", role =c("aut", "cre"), 
     email="zhilongjia@gmail.com"), 
@@ -18,7 +18,7 @@ biocViews: Clustering, GeneSetEnrichment, GeneExpression, Visualization,
     Pathways, KEGG, GO, Microarray, Sequencing, SystemsBiology, DataRepresentation,
     DataImport
 Depends:
-    R (>= 3.2),
+    R (>= 3.4),
     cluster,
     ggplot2,
     kohonen
