@@ -39,11 +39,12 @@ import(fastcluster)
 import(foreach)
 import(ggplot2)
 import(gplots)
-import(kohonen)
 import(methods)
 import(parallel)
 import(reshape2)
 importFrom(corrplot,corrplot)
+importFrom(kohonen,som)
+importFrom(kohonen,somgrid)
 importFrom(mclust,Mclust)
 importFrom(mclust,mclustBIC)
 importMethodsFrom(Biobase,exprs)
